Styles. Fix tests.